# src/main/java/com/swt/project/compoundService/entity/CompoundComponent.java
@@ -1,0 +1,5 @@
+package com.swt.project.compoundService.entity;
+
+public enum CompoundComponent {
+    INITIALCAPITAL, PERIOD, INTERESTRATE, FINALCAPITAL
+}
